Monthly link patrol.

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -597,7 +597,7 @@ linkage the same name is a violation of the One Definition Rule (ODR)
 
 <p>For more details about the way that GCC implements these and other
 C++ features, please read the <a
-href="http://www.codesourcery.com/cxx-abi">ABI specification</a>.
+href="http://www.codesourcery.com/cxx-abi/">ABI specification</a>.
 Note the <code>std::typeinfo_t</code> objects which <i>must</i> be
 resolved all begin with "_ZTS". Refer to <code>ld</code>'s
 documentation for a description of the "<code>-E</code>" &amp;
