--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -71,6 +71,13 @@ archived mail messages that reported the builds.</p>
 </tr>
 
 <tr>
+<td>alphaev67-dec-osf4.0f</td>
+<td>&nbsp;</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2001-12/msg01250.html">3.0.3</a></td>
+</tr>
+
+<tr>
 <td>alphaev67-dec-osf5.1</td>
 <td>&nbsp;</td>
 <td>Successful:
@@ -288,6 +295,13 @@ Unsuccessful:
 
 <tr>
 <td>i686-pc-linux-gnu</td>
+<td>Red Hat 7.1, glibc 2.2.2, kernel 2.4.2</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2001-12/msg01250.html">3.0.3</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
 <td>Red Hat 7.1, glibc 2.2.2, kernel 2.4.9-12</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2001-12/msg00389.html">3.0.2</a></td>
@@ -298,6 +312,13 @@ Unsuccessful:
 <td>Red Hat 7.1, glibc 2.2, kernel 2.4.10</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2001-10/msg01588.html">3.0.2</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>Red Hat 7.1, glibc 2.2.4, kernel 2.4.16</td>
+<td>Successful (C, C++, Java):
+<a href="http://gcc.gnu.org/ml/gcc/2001-12/msg01250.html">3.0.3</a></td>
 </tr>
 
 <tr>
