Add entry for i386-redhat-linux-gnu, Red Hat 6.2, glibc 2.1.3, kernel 2.4.14, for 3.0.3.

--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -173,6 +173,13 @@ Mostly successful:
 </tr>
 
 <tr>
+<td>i386-redhat-linux-gnu</td>
+<td>Red Hat 6.2, glibc 2.1.3, kernel 2.4.14</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2001-12/msg01275.html">3.0.3</a></td>
+</tr>
+
+<tr>
 <td>i386-unknown-freebsd4.2</td>
 <td>&nbsp;</td>
 <td>Successful:
