Add entry for i686-pc-linux-gnu, SuSE 7.2, glibc 2.2.2, kernel 2.4.4, for 3.0.3.

--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -371,6 +371,13 @@ Unsuccessful:
 </tr>
 
 <tr>
+<td>i686-pc-linux-gnu</td>
+<td>SuSE 7.2, glibc 2.2.2, kernel 2.4.4</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2001-12/msg01278.html">3.0.3</a></td>
+</tr>
+
+<tr>
 <td>i686-pld-linux-gnu</td>
 <td>PLD devel 1.0, glibc 2.2.3, kernel 2.2.19</td>
 <td>Successful:
