Add entry for i686-pc-linux-gnu, Slackware 7.1, glibc 2.1.3, kernel 2.4.17, for 3.0.3.

--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -337,6 +337,13 @@ Unsuccessful:
 
 <tr>
 <td>i686-pc-linux-gnu</td>
+<td>Slackware 7.1, glibc 2.1.3, kernel 2.4.17</td>
+<td>Successful (C, C++):
+<a href="http://gcc.gnu.org/ml/gcc/2001-12/msg01286.html">3.0.3</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
 <td>Slackware 8.0, glibc 2.2.3</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2001-09/msg01189.html">3.0.1</a></td>
