Update entry for hppa2.0w-hp-hpux11.00 for 3.0.3.

--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -125,8 +125,8 @@ archived mail messages that reported the builds.</p>
 <td>&nbsp;</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2001-08/msg00193.html">3.0</a>;
-Mostly successful:
-<a href="http://gcc.gnu.org/ml/gcc/2001-12/msg01178.html">3.0.3</a></td>
+Successful (C):
+<a href="http://gcc.gnu.org/ml/gcc/2001-12/msg01290.html">3.0.3</a></td>
 </tr>
 
 <tr>
