--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -103,7 +103,8 @@ archived mail messages that reported the builds.</p>
 <td>hppa1.1-hp-hpux10.20</td>
 <td>&nbsp;</td>
 <td>Successful:
-<a href="http://gcc.gnu.org/ml/gcc/2001-08/msg00881.html">3.0</a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2001-08/msg00881.html">3.0</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2001-12/msg01292.html">3.0.3</a></td>
 </tr>
 
 <tr>
