Add syntax clarification

--- a/htdocs/search.html
+++ b/htdocs/search.html
@@ -26,6 +26,7 @@ Sort by: <select name=sort>
 <option value=revtime>Oldest
 <option value=revtitle>Title Z-A
 </select>
+<a href="#syntax">Search syntax</a>
 </font>
 <br>
 <input type=submit value="Search:">
@@ -625,6 +626,21 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <p>
 <input type=reset>
 </form>
+<hr noshade size=1>
+
+<a name="syntax"></a>
+
+In a <em>boolean expression</em>, the words searched for, or parts inside
+parentheses <b>()</b> are separated by the special words <b>and</b>,
+<b>or</b> and <b>not</b>.  Examples of correct expressions are:
+
+<ul>
+<li><b>cat and dog</b>
+<li><b>cat not dog</b>
+<li><b>cat or (dog not nose)</b>
+</ul>
+Note that the operator <b>not</b> is binary, having the meaning of
+'without'.
 <hr noshade size=1>
 
 <em>Database last updated</em>
