Hyphenate search-syntax

--- a/htdocs/search.html
+++ b/htdocs/search.html
@@ -26,7 +26,7 @@ Sort by: <select name=sort>
 <option value=revtime>Oldest
 <option value=revtitle>Title Z-A
 </select>
-<a href="#syntax">Search syntax</a>
+<a href="#syntax">Search-syntax</a>
 </font>
 <br>
 <input type=submit value="Search:">
