--- a/htdocs/search.html
+++ b/htdocs/search.html
@@ -631,7 +631,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <a name="syntax"></a>
 
 In a <em>boolean expression</em>, the words searched for, or parts inside
-parentheses <b>()</b> are separated by the special words <b>and</b>,
+parentheses <b>()</b> are separated by the operator-words <b>and</b>,
 <b>or</b> and <b>not</b>.  Examples of correct expressions are:
 
 <ul>
