2001-12-27  Phil Edwards  <pme@gcc.gnu.org>
	* index.html:  Fix date.
	* status.html:  Update last-known-good GCC snapshot.

--- a/htdocs/libstdc++/status.html
+++ b/htdocs/libstdc++/status.html
@@ -44,11 +44,11 @@
 
 <p>Compiling this library requires sources of a recent version of GCC.
    We suggest using CVS GCC.  The latest library snapshot has also been
-   tested with this recent GCC snapshot:  <strong>2001-05-14</strong>,
+   tested with this recent GCC snapshot:  <strong>2001-12-24</strong>,
    which is available from a
    <a href="http://gcc.gnu.org/mirrors.html">GCC mirror site</a> under the
-   snapshots directory as &quot;2001-05-14/gcc[-g++]-20010514.tar.gz&quot;,
-   or via CVS using the &quot;gcc_ss_20010514&quot; checkout tag.
+   snapshots directory as &quot;2001-12-24/gcc[-g++]-200112-24tar.gz&quot;,
+   or via CVS using the &quot;gcc_ss_20011224&quot; checkout tag.
 </p>
 
 <p>The most recent version of this library that will build with
