--- a/htdocs/develop.html
+++ b/htdocs/develop.html
@@ -233,24 +233,24 @@ stages of development, bugfixes, etc), resulting from the development plan:
        |                                      GCC 3.0.1 release (Aug 20 2001)
        |                                              \
        v                                               v
-  GCC 3.1 Phase 1 (ended Oct 15 2001)         GCC 3.0.2 release (Oct 25 2001)
-       |                                                :
-       v                                                :
-  GCC 3.1 Phase 2 (ends Dec 15 2001)
-       |
-       v
-  GCC 3.1 Phase 3 (ends Feb 15 2002)
+  GCC 3.1 Stage 1 (ended Oct 15 2001)         GCC 3.0.2 release (Oct 25 2001)
+       |                                                 \
+       v                                                  v
+  GCC 3.1 Stage 2 (ended Dec 19 2001)         GCC 3.0.3 release (Dec 20 2001)
+       |                                                   :
+       v                                                   :
+  GCC 3.1 Stage 3 (ends Feb 15 2002)
        |
        +-- GCC 3.1 branch created -------------+
        |                                        \
        v                                         v
-  GCC 3.2 Phase 1 (ends Apr 15 2002)          GCC 3.1 release (Apr 15 2002)
+  GCC 3.2 Stage 1 (ends Apr 15 2002)          GCC 3.1 release (Apr 15 2002)
        |                                           \
        v                                            v
-  GCC 3.2 Phase 2 (ends Jun 15 2002)          GCC 3.1.1 release (Jun 15 2002)
+  GCC 3.2 Stage 2 (ends Jun 15 2002)          GCC 3.1.1 release (Jun 15 2002)
        |                                              \
        V                                               v
-  GCC 3.2 Phase 3 (ends Aug 15 2002)          GCC 3.1.2 release (Aug 15 2002)
+  GCC 3.2 Stage 3 (ends Aug 15 2002)          GCC 3.1.2 release (Aug 15 2002)
        |                                                :
        |                                                :
        +-- GCC 3.2 branch created -------------+
