Update South African mirror site.

--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -55,7 +55,7 @@ sites</a>.</p>
 <LI>Romania: <A HREF="ftp://ftp.lbi.ro/mirrors/ftp.cygnus.com/pub/egcs/">ftp.lbi.ro</a>, thanks to <a href="mailto:tim@lbi.ro">Surdu Bogdan</a>!
 <li>Russia: <a href="ftp://ftp.nc.orc.ru/pub/egcs/">ftp.nc.orc.ru</a>
 <li>Russia (Moscow, no snapshots): <a href="ftp://linux.ihep.su/pub/cygnus/egcs/">linux.ihep.su</a>
-<li>South Africa: <a href="ftp://ftp.sun.ac.za/sites/sourceware.cygnus.com/pub/gcc/">ftp.sun.ac.za</a>
+<li>South Africa: <a href="ftp://ftp.sun.ac.za/mirrorsites/sourceware.cygnus.com/pub/gcc/">ftp.sun.ac.za</a>
 <LI>Sweden: <A HREF="ftp://ftp.sunet.se/pub/gnu/egcs/">ftp.sunet.se</a>
 <LI>Sweden: <A HREF="ftp://ftp.lysator.liu.se/mirror/unix/egcs/">ftp.lysator.liu.se</a>
 <LI>Sweden: <A HREF="ftp://ftp.chl.chalmers.se/pub/egcs/">ftp.chl.chalmers.se</a>
