--- a/htdocs/news.html
+++ b/htdocs/news.html
@@ -12,6 +12,43 @@ home page</a>.
 
 <dl>
 
+<dt><b>August 20, 2001</b></dt>
+<dd>
+GCC 3.0.1 has been released.
+</dd>
+
+<dt><b>August 16, 2001</b></dt>
+<dd>
+The gcc.gnu.org machine will be moving to a new physical location with
+significantly improved bandwidth and backup on Saturday, August 18th.
+The move is expected to take less than two hours; DNS will be adjusted
+accordingly, the new IP address will be 209.249.29.67.
+</dd>
+
+<dt><b>July 17, 2001</b></dt>
+<dd>
+The <a href="steering.html">Steering Committee</a> adopted a
+<a href="develop.html">new development plan</a> which we will
+start using for GCC 3.1, scheduled for April 15, 2002.
+</dd>
+
+<dt><b>July 9, 2001</b></dt>
+<dd>
+Daniel Berlin and Jeff Law have contributed a
+<a href="news/ssa-ccp.html">Sparse Conditional Constant Propagation</a> 
+optimization pass.
+</dd>
+
+<dt><b>June 18, 2001</b></dt>
+<dd>
+<a href="gcc-3.0/">GCC 3.0</a> has been released.
+</dd>
+
+<dt><b>March 16, 2001</b></dt>
+<dd>
+<a href="gcc-2.95/gcc-2.95.3.html">GCC 2.95.3</a> has been released.
+</dd>
+
 <dt><b>February 12, 2001</b></dt>
 <dd>
 Our CVS tree has branched for the GCC 3.0 release process and Mark Mitchell,
