* docs.html: Remove broken URL to Alex Petit-Bianco.

--- a/htdocs/java/docs.html
+++ b/htdocs/java/docs.html
@@ -79,7 +79,7 @@ conferences and magazines.
       Java in Embedded Systems</cite>".
       <br>[<a href="papers/nosb.html">HTML</a>] 
           [<a href="papers/nosb.ps.gz">PS for presentation slides</a>]
-      <br>Author:  <a href="http://www.cygnus.com/~apbianco/">Alex Petit-Bianco</a>.
+      <br>Author: Alex Petit-Bianco.
       <p>
 
   <li><b>November 1997</b>:  "<cite>Writing native Java methods in natural C++</cite>"
