--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -64,6 +64,13 @@ archived mail messages that reported the builds.</p>
 </tr>
 
 <tr>
+<td>alphaev56-dec-osf5.1</td>
+<td>&nbsp;</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2001-12/msg01338.html">3.0.3</a></td>
+</tr>
+
+<tr>
 <td>alphaev56-unknown-linux-gnu</td>
 <td>Red Hat 6.2</td>
 <td>Successful:
@@ -222,6 +229,13 @@ Successful (C):
 </tr>
 
 <tr>
+<td>i586-pc-linux-gnu</td>
+<td>Red Hat 7.0, glibc 2.1.92, kernel 2.2.16</td>
+<td>Successful (C, C++, ObjC, Java):
+<a href="http://gcc.gnu.org/ml/gcc/2001-12/msg01405.html">3.0.3</a></td>
+</tr>
+
+<tr>
 <td>i586-pc-linux-gnu (k6)</td>
 <td>Red Hat 7.0, glibc 2.2.4</td>
 <td>Successful:
@@ -247,8 +261,8 @@ Unsuccessful:
 <tr>
 <td>i686-pc-cygwin</td>
 <td>Cygwin-1.3.6-6 on WinXP Pro</td>
-<td>Successful (C):
-<a href="http://gcc.gnu.org/ml/gcc/2001-12/msg01189.html">3.0.3</a></td>
+<td>Successful (C, C++):
+<a href="http://gcc.gnu.org/ml/gcc/2001-12/msg01300.html">3.0.3</a></td>
 </tr>
 
 <tr>
@@ -282,9 +296,10 @@ Unsuccessful:
 
 <tr>
 <td>i686-pc-linux-gnu</td>
-<td>Mandrake 8.1, glibc 2.2.4</td>
+<td>Mandrake 8.1, glibc 2.2.4, kernel 2.4.8</td>
 <td>Successful:
-<a href="http://gcc.gnu.org/ml/gcc/2001-11/msg00843.html">3.0.2</a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2001-11/msg00843.html">3.0.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2001-12/msg01330.html">3.0.3</a></td>
 </tr>
 
 <tr>
@@ -327,6 +342,13 @@ Unsuccessful:
 <td>Red Hat 7.1, glibc 2.2.4, kernel 2.4.16</td>
 <td>Successful (C, C++, Java):
 <a href="http://gcc.gnu.org/ml/gcc/2001-12/msg01250.html">3.0.3</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>Red Hat 7.2, glibc 2.2.4, kernel 2.4.7</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2001-12/msg01337.html">3.0.3</a></td>
 </tr>
 
 <tr>
