Revised patch submission guidelines.

--- a/htdocs/contribute.html
+++ b/htdocs/contribute.html
@@ -120,9 +120,18 @@ changes easier but do not change GCC's behavior, then new code, then
 the changes that actually make use of the new code and change GCC's
 behavior.)</p>
 
-<p>We accept patches as plain text (preferred for the compilers
-themselves), MIME attachments (preferred for the web pages), or as
-uuencoded gzipped text.</p>
+<p>We prefer patches posted as plain text or as MIME parts of type
+<code>text/x-patch</code> or <code>text/plain</code>, disposition
+<code>inline</code>, encoded as <code>7bit</code> or
+<code>8bit</code>.  If the patch is too big or too mechanical, posting
+it gzipped or bzip2ed and uuencoded or encoded as a
+<code>base64</code> MIME part is acceptable, as long as the ChangeLog
+is still posted as plain text.  Other than that, it is strongly
+discouraged to post patches as MIME parts of type
+<code>application/</code><i>whatever</i>, disposition
+<code>attachment</code> and/or encoded as <code>base64</code> or
+<code>quoted-printable</code>.  Avoid MIME large-message splitting
+(<code>message/partial</code>) at all costs.</p>
 
 <p>When you have all these pieces, bundle them up in a mail message
 and send it to <a
