--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -85,6 +85,13 @@ archived mail messages that reported the builds.</p>
 </tr>
 
 <tr>
+<td>alphaev6-unknown-linux-gnu</td>
+<td>Debian 2.2, glibc 2.1.3, kernel 2.2.17
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00016.html">3.0.3</a></td>
+</tr>
+
+<tr>
 <td>alphaev67-dec-osf5.1</td>
 <td>&nbsp;</td>
 <td>Successful:
@@ -463,6 +470,13 @@ Unsuccessful:
 <td>&nbsp;</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2001-06/msg01914.html">3.0</a></td>
+</tr>
+
+<tr>
+<td>powerpc-unknown-linux-gnu</td>
+<td>Debian 3.0, glibc 2.2.4, kernel 2.4.16</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00016.html">3.0.3</a></td>
 </tr>
 
 <tr>
