Add hppa2.0w-hp-hpux11.11 for 3.0.3.

--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -145,6 +145,13 @@ Successful (C):
 </tr>
 
 <tr>
+<td>hppa2.0w-hp-hpux11.11</td>
+<td>&nbsp;</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00062.html">3.0.3</a></td>
+</tr>
+
+<tr>
 <td>hppa64-hp-hpux11.00</td>
 <td>&nbsp;</td>
 <td>Successful:
