--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -481,7 +481,7 @@ Unsuccessful:
 
 <tr>
 <td>powerpc-unknown-linux-gnu</td>
-<td>Debian 3.0, glibc 2.2.4, kernel 2.4.16</td>
+<td>Debian 3.0 (testing snapshot 20011231), glibc 2.2.4, kernel 2.4.16</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00016.html">3.0.3</a></td>
 </tr>
