Fix/adjust broken/changed links all over the place, especially in old release directories.

--- a/htdocs/egcs-1.0/egcs-1.0.1.html
+++ b/htdocs/egcs-1.0/egcs-1.0.1.html
@@ -95,7 +95,7 @@ and even the soon to be released GCC 2.8 compilers.
   <li>Integrated C++ runtime libraries, including support for most major
   linux systems!
   <li>The integrated libstdc++ library includes a verbatim copy of 
-  <a href="http://www.sgi.com/Technology/STL/">SGI's STL release.</a>
+  SGI's STL release.
   <li>Integrated GNU Fortran compiler
   <li>New instruction scheduler
   <li>New alias analysis code
