--- a/htdocs/egcs-1.0/egcs-1.0.3.html
+++ b/htdocs/egcs-1.0/egcs-1.0.3.html
@@ -53,8 +53,7 @@ GCC 2.8.
   <li>Integrated C++ runtime libraries, including support for most major
   GNU/Linux systems!
   <li>The integrated libstdc++ library includes a verbatim copy of 
-  <a href="http://www.sgi.com/Technology/STL">SGI's STL release instead
-  of a modified copy.</a>
+  SGI's STL release instead of a modified copy.
   <li>Integrated GNU Fortran compiler
   <li>New instruction scheduler
   <li>New alias analysis code
