--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -55,12 +55,11 @@ sites</a>.</p>
 <LI>Romania: <A HREF="ftp://ftp.lbi.ro/mirrors/ftp.cygnus.com/pub/egcs/">ftp.lbi.ro</a>, thanks to <a href="mailto:tim@lbi.ro">Surdu Bogdan</a>!
 <li>Russia: <a href="ftp://ftp.nc.orc.ru/pub/egcs/">ftp.nc.orc.ru</a>
 <li>Russia (Moscow, no snapshots): <a href="ftp://linux.ihep.su/pub/cygnus/egcs/">linux.ihep.su</a>
-<li>South Africa: <a href="ftp://ftp.sun.ac.za/mirrorsites/sourceware.cygnus.com/pub/gcc/">ftp.sun.ac.za</a>
+<li>South Africa: <a href="ftp://ftp.sun.ac.za/cygnus/gcc/">ftp.sun.ac.za</a>
 <LI>Sweden: <A HREF="ftp://ftp.sunet.se/pub/gnu/egcs/">ftp.sunet.se</a>
 <LI>Sweden: <A HREF="ftp://ftp.lysator.liu.se/mirror/unix/egcs/">ftp.lysator.liu.se</a>
 <LI>Sweden: <A HREF="ftp://ftp.chl.chalmers.se/pub/egcs/">ftp.chl.chalmers.se</a>
 <LI>Taiwan: <a href="ftp://ftp1.sinica.edu.tw/pub3/CYGNUS/gcc/">ftp1.sinica.edu.tw</a>
-<li>Taiwan: <a href="ftp://ftp.edu.tw/computer-languages/C/gcc/">ftp.edu.tw</a>
 <li>Taiwan: <a href="ftp://ftp.nctu.edu.tw/computer-languages/C/gcc/">ftp.nctu.edu.tw</a>
 <li>UK: <a href="ftp://ftp.mirror.ac.uk/sites/sourceware.cygnus.com/pub/gcc/">ftp.mirror.ac.uk</a>
 <li>UK: <a href="ftp://sunsite.doc.ic.ac.uk/Mirrors/sourceware.cygnus.com/pub/gcc/">sunsite.doc.ic.ac.uk</a>
