--- a/htdocs/gcc-2.95/gcc-2.95.html
+++ b/htdocs/gcc-2.95/gcc-2.95.html
@@ -30,7 +30,7 @@ list of new features found in the GCC 2.95 releases.
 <p>The sources include installation instructions in both HTML
 and plaintext forms in the <code>install</code> directory in the distribution.
 However, the most up to date
- <a href="../install/index.html">installation instructions</a>
+ <a href="http://gcc.gnu.org/install/">installation instructions</a>
 and <a href="buildstat.html">build/test status</a> are on the web pages.  We
 will update those pages as new information becomes available.
 
