--- a/htdocs/projects/index.html
+++ b/htdocs/projects/index.html
@@ -227,8 +227,8 @@ obstacks, so it can work again with current GCC.</p>
 <h3><a name="improve_wconversion">Improve <code>-Wconversion</code></a></h3>
 <p>Improve <code>-Wconversion</code> so that it can be used for
 security auditing as well as for its original intended purpose of
-helping with converting old code to ISO C.  See a
-<a href="http://www2.merton.ox.ac.uk/~security/security-audit-200012/0028.html">message
+helping with converting old code to ISO C.  See a <a
+href="http://security-archive.merton.ox.ac.uk/security-audit-200012/0028.html">message
 to the security-audit list</a> discussing this.  The design for such
 an improved option or collection of options should be discussed with
 the gcc and security-audit lists.</p>
