Add i686-pc-linux-gnu (Slackware 8.0, glibc 2.2.4, kernel 2.4.17) for 3.0.3.

--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -388,6 +388,13 @@ Unsuccessful:
 
 <tr>
 <td>i686-pc-linux-gnu</td>
+<td>Slackware 8.0, glibc 2.2.4, kernel 2.4.17</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00186.html">3.0.3</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
 <td>SuSE 6.2, glibc 2.1.1, kernel 2.2.19</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2001-11/msg00016.html">3.0.2</a></td>
