Structural and copyeditorial fixes

--- a/htdocs/contribute.html
+++ b/htdocs/contribute.html
@@ -9,9 +9,9 @@
 <body>
 <h1 align="center">Contributing to GCC</h1>
 
-<p>We strongly encourage contributions of code, bugfixes, new
+<p>We strongly encourage contributions of code, bug fixes, new
 optimizations, new features, documentation updates, web page
-improvements, etc. for GCC</p>
+improvements, etc. for GCC.</p>
 
 <p>There are certain legal requirements and style issues which all
 contributions must meet.</p>
@@ -36,8 +36,8 @@ copyright assignment form filled out and filed with the FSF.</p>
 documentation by the FSF</a> for details and contact us (either via
 the <a href="mailto:gcc@gcc.gnu.org">gcc@gcc.gnu.org</a> list or the
 GCC maintainer that is taking care of your contributions) to obtain
-the relevant forms. Note that it's a good idea to put
-<a href="mailto:assignments@gnu.org">assignments@gnu.org</a> in copy with
+the relevant forms.  It's a good idea to send
+<a href="mailto:assignments@gnu.org">assignments@gnu.org</a> a copy of
 your request.</p>
 
 <p>Small changes can be accepted without a copyright assignment form
@@ -94,7 +94,7 @@ Documentation changes do not require a bootstrap, but must pass
 
 <dt>The patch itself</dt>
 <dd>
-If you are accessing the <a href="cvs.html"> CVS repository</a> at
+If you are accessing the <a href="cvs.html">CVS repository</a> at
 gcc.gnu.org, use &quot;<code>cvs update; cvs diff -c3p</code>&quot;;
 else, use &quot;<code>diff -c3p OLD NEW</code>&quot; or
 &quot;<code>diff -up OLD NEW</code>&quot;.  If your version of diff
@@ -137,7 +137,7 @@ discouraged to post patches as MIME parts of type
 and send it to <a
 href="mailto:gcc-patches@gcc.gnu.org">gcc-patches@gcc.gnu.org</a>.
 All patches and related discussion should be sent to the gcc-patches
-mailinglist.  For further information on the GCC CVS repository, see
+mailing list.  For further information on the GCC CVS repository, see
 the <a href="cvs.html">Anonymous read-only CVS access</a> and <a
 href="cvswrite.html">Read-write CVS access</a> pages.</p>
 
