XML validation fixes

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -1,5 +1,4 @@
 <html>
-
 <head>
 <title>GCC Home Page</title>
 </head>
@@ -9,117 +8,117 @@
 <table border="0" cellspacing="0" cellpadding="2">
 <tr>
 
-<td valign="TOP">                                         <!-- left frame -->
+<td valign="top">                                         <!-- left frame -->
 <table border="0" cellspacing="0" cellpadding="2" width="1%">
 
-<TR><TD><TABLE CELLSPACING="0" WIDTH="100%">
-<TR BGCOLOR="#FFEE99"><TD>
-<H2>About</H2>
-</TD></TR>
-<TR BGCOLOR="#FFFFBB"><TD>
-<P>
-<A HREF="gccmission.html">Mission Statement</A><BR>
-<A HREF="lists.html">Mailing lists</A><BR>
-<A HREF="releases.html#timeline">Timeline</A><BR>
-<A HREF="http://gcc.gnu.org/thanks.html">Contributors</A><BR>
-<A HREF="steering.html">Steering Committee</A><BR>
-</P>
-</TD></TR>
-</TABLE></TD></TR>
+<tr><td><table cellspacing="0" width="100%">
+<tr bgcolor="#FFEE99"><td>
+<h2>About</h2>
+</td></tr>
+<tr bgcolor="#FFFFBB"><td>
+<p>
+<a href="gccmission.html">Mission Statement</a><br />
+<a href="lists.html">Mailing lists</a><br />
+<a href="releases.html#timeline">Timeline</a><br />
+<a href="http://gcc.gnu.org/thanks.html">Contributors</a><br />
+<a href="steering.html">Steering Committee</a><br />
+</p>
+</td></tr>
+</table></td></tr>
 
 
-<TR><TD><TABLE CELLSPACING="0" WIDTH="100%">
-<TR BGCOLOR="#FFEE99"><TD>
-<H2>Docs</H2>
-</TD></TR>
-<TR BGCOLOR="#FFFFBB"><TD>
-<P>
-<A HREF="faq.html">FAQ</A><BR>
-<A HREF="http://gcc.gnu.org/install/">Installation</A><BR>
-<A HREF="http://gcc.gnu.org/install/specific.html">Supported Platforms</A><BR>
-<A HREF="onlinedocs/">Manual</A><BR>
-<A HREF="readings.html">Further Readings</A>
-</P>
-</TD></TR>
-</TABLE></TD></TR>
+<tr><td><table cellspacing="0" width="100%">
+<tr bgcolor="#FFEE99"><td>
+<h2>Docs</h2>
+</td></tr>
+<tr bgcolor="#FFFFBB"><td>
+<p>
+<a href="faq.html">FAQ</a><br />
+<a href="http://gcc.gnu.org/install/">Installation</a><br />
+<a href="http://gcc.gnu.org/install/specific.html">Supported Platforms</a><br />
+<a href="onlinedocs/">Manual</a><br />
+<a href="readings.html">Further Readings</a>
+</p>
+</td></tr>
+</table></td></tr>
 
 
-<TR><TD><TABLE CELLSPACING="0" WIDTH="100%">
-<TR BGCOLOR="#FFEE99"><TD>
-<H2>Download</H2>
-</TD></TR>
-<TR BGCOLOR="#FFFFBB"><TD>
-<P>
-<A HREF="releases.html">Releases</A><BR>
-<A HREF="snapshots.html">Snapshots</A><BR>
-<A HREF="mirrors.html">Mirror sites</A><BR>
-<A HREF="http://gcc.gnu.org/install/binaries.html">Binaries</A>
-</P>
-</TD></TR>
-</TABLE></TD></TR>
+<tr><td><table cellspacing="0" width="100%">
+<tr bgcolor="#FFEE99"><td>
+<h2>Download</h2>
+</td></tr>
+<tr bgcolor="#FFFFBB"><td>
+<p>
+<a href="releases.html">Releases</a><br />
+<a href="snapshots.html">Snapshots</a><br />
+<a href="mirrors.html">Mirror sites</a><br />
+<a href="http://gcc.gnu.org/install/binaries.html">Binaries</a>
+</p>
+</td></tr>
+</table></td></tr>
 
 
-<TR><TD><TABLE CELLSPACING="0" WIDTH="100%">
-<TR BGCOLOR="#FFEE99"><TD>
-<H2>Development</H2>
-</TD></TR>
-<TR BGCOLOR="#FFFFBB"><TD>
-<P>
-<A HREF="develop.html">Development Plan</A><BR>
-<A HREF="contribute.html">Contributing</A><BR>
-<A HREF="contributewhy.html">...Why?</A><BR>
-<A HREF="projects/">Open projects</A><BR>
-<A HREF="frontends.html">Front ends</A><BR>
-<A HREF="extensions.html">Extensions</A><BR>
-<A HREF="cvs.html">CVS read access</A><BR>
-<A HREF="rsync.html">Rsync read access</A><BR>
-<A HREF="cvsup.html">CVSup mirrors</A><BR>
-<A HREF="cvswrite.html">CVS write access</A><BR>
-</P>
-</TD></TR>
-</TABLE></TD></TR>
+<tr><td><table cellspacing="0" width="100%">
+<tr bgcolor="#FFEE99"><td>
+<h2>Development</h2>
+</td></tr>
+<tr bgcolor="#FFFFBB"><td>
+<p>
+<a href="develop.html">Development Plan</a><br />
+<a href="contribute.html">Contributing</a><br />
+<a href="contributewhy.html">...Why?</a><br />
+<a href="projects/">Open projects</a><br />
+<a href="frontends.html">Front ends</a><br />
+<a href="extensions.html">Extensions</a><br />
+<a href="cvs.html">CVS read access</a><br />
+<a href="rsync.html">Rsync read access</a><br />
+<a href="cvsup.html">CVSup mirrors</a><br />
+<a href="cvswrite.html">CVS write access</a><br />
+</p>
+</td></tr>
+</table></td></tr>
 
 
-<TR><TD><TABLE CELLSPACING="0" WIDTH="100%">
-<TR BGCOLOR="#FFEE99"><TD>
-<H2>Bugs</H2>
-</TD></TR>
-<TR BGCOLOR="#FFFFBB"><TD>
-<P>
-<A HREF="bugs.html">Report a bug</A><BR>
-<A HREF="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?database=gcc&amp;user=guest&amp;password=guest&amp;cmd=login">GNATS</A><BR>
-<A HREF="gnatswrite.html">...write access</A><BR>
-<A HREF="bugs.html#known">Known bugs</A>
-</P>
-<HR>
-<FORM METHOD="get" ACTION="http://gcc.gnu.org/cgi-bin/ml-request">
-  <SMALL>Get our announcements:<BR>
-  <INPUT TYPE="hidden" NAME="digest"    VALUE="off">
-  <INPUT TYPE="hidden" NAME="operation" VALUE="subscribe">
-  <INPUT TYPE="hidden" NAME="listname"  VALUE="gcc-announce">
-  <INPUT TYPE="text"   NAME="username"  VALUE="your e-mail address" size="20">
-  <INPUT TYPE="Submit" NAME="submit"    VALUE="Subscribe!">
-  </SMALL>
-</FORM>
-</TD></TR>
-</TABLE></TD></TR>
+<tr><td><table cellspacing="0" width="100%">
+<tr bgcolor="#FFEE99"><td>
+<h2>Bugs</h2>
+</td></tr>
+<tr bgcolor="#FFFFBB"><td>
+<p>
+<a href="bugs.html">Report a bug</a><br />
+<a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?database=gcc&amp;user=guest&amp;password=guest&amp;cmd=login">GNATS</a><br />
+<a href="gnatswrite.html">...write access</a><br />
+<a href="bugs.html#known">Known bugs</a>
+</p>
+<hr />
+<form method="get" action="http://gcc.gnu.org/cgi-bin/ml-request">
+  <p><small>Get our announcements:<br />
+  <input type="hidden" name="digest"    value="off" />
+  <input type="hidden" name="operation" value="subscribe" />
+  <input type="hidden" name="listname"  value="gcc-announce" />
+  <input type="text"   name="username"  value="your e-mail address" size="20" />
+  <input type="submit" name="submit"    value="Subscribe!" />
+  </small></p>
+</form>
+</td></tr>
+</table></td></tr>
 
 </table>
 </td>                                              <!-- end of left frame -->
 
 <td bgcolor="white" valign="top" width="99%">            <!-- right frame -->
 
-<img src="gcc.jpg" alt="" align="right">
+<img src="gcc.jpg" alt="" align="right" />
 
 <h2>Welcome to the GCC home page!</h2>
 
 <p>In April 1999, the egcs steering committee was appointed by the FSF
 as the official GNU maintainer for GCC.  At that time GCC was renamed
 from the "GNU C Compiler" to the "GNU Compiler Collection" and received
-a new <a href="gccmission.html">mission statement</a>.
+a new <a href="gccmission.html">mission statement</a>.</p>
 
 <p>Currently GCC contains front ends for C, C++, Objective C, Chill,
-Fortran, and <a href="java/">Java</A>
+Fortran, and <a href="java/">Java</a>
 as well as libraries for these languages (<a href="libstdc++/">libstdc++</a>,
 libgcj,...).  The next major release, GCC 3.1, will also include an
 Ada front end.
@@ -141,7 +140,7 @@ and automated testers</a> to maintain and improve quality.
 <a href="gcc-3.0/">GCC 3.0.3</a> is the current release.
 </p>
 
-<hr>
+<hr />
 
 <!--
 <h2>Upcoming Events</h2>
@@ -217,7 +216,8 @@ CPU core.
 </dl>
 
 <a href="news.html">Older news and announcements...</a>
-<br><a href="http://gcc.gnu.org/onlinedocs/g77_news.html">Fortran news</a>
+<br />
+<a href="http://gcc.gnu.org/onlinedocs/g77_news.html">Fortran news</a>
 
 </td>                                             <!-- end of right frame -->
 
