Add the following entries for 3.0.3:   alpha-suse-linux-gnu (SuSE 7.1, glibc 2.2, kernel 2.4.x)   i486-suse-linux-gnu (SuSE 7.1, glibc 2.2, kernel 2.4.x)   i486-suse-linux-gnu (SuSE 7.2, glibc 2.2.2, kernel 2.4.x)   i486-suse-linux-gnu (SuSE 7.3, glibc 2.2.4, kernel 2.4.x)   powerpc-suse-linux-gnu (SuSE 7.3, glibc 2.2.4, kernel 2.4.x)

--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -36,6 +36,13 @@ archived mail messages that reported the builds.</p>
 </tr>
 
 <tr>
+<td>alpha-suse-linux-gnu</td>
+<td>SuSE 7.1, glibc 2.2, kernel 2.4.x</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00245.html">3.0.3</a></td>
+</tr>
+
+<tr>
 <td>alpha-pld-linux-gnu</td>
 <td>PLD devel 1.0, glibc 2.2.3, kernel 2.2.19</td>
 <td>Successful:
@@ -212,6 +219,27 @@ Successful (C):
 <td>i386-unknown-freebsd4.3</td>
 <td>&nbsp;</td>
 <td>Successful: 3.0</td>
+</tr>
+
+<tr>
+<td>i486-suse-linux-gnu</td>
+<td>SuSE 7.1, glibc 2.2, kernel 2.4.x</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00245.html">3.0.3</a></td>
+</tr>
+
+<tr>
+<td>i486-suse-linux-gnu</td>
+<td>SuSE 7.2, glibc 2.2.2, kernel 2.4.x</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00245.html">3.0.3</a></td>
+</tr>
+
+<tr>
+<td>i486-suse-linux-gnu</td>
+<td>SuSE 7.3, glibc 2.2.4, kernel 2.4.x</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00245.html">3.0.3</a></td>
 </tr>
 
 <tr>
@@ -477,6 +505,13 @@ Unsuccessful:
 <td>&nbsp;</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2001-10/msg00647.html">3.0.1</a></td>
+</tr>
+
+<tr>
+<td>powerpc-suse-linux-gnu</td>
+<td>SuSE 7.3, glibc 2.2.4, kernel 2.4.x</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00245.html">3.0.3</a></td>
 </tr>
 
 <tr>
