--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -471,6 +471,13 @@ Unsuccessful:
 </tr>
 
 <tr>
+<td>k6-redhat-linux-gnu</td>
+<td>Red Hat 7.0 with upgrades, glibc 2.2.4</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00242.html">3.0.3</a></td>
+</tr>
+
+<tr>
 <td>mips-sgi-irix6.2</td>
 <td>&nbsp;</td>
 <td>Successful:
