Add ia64-unknown-linux (Red Hat 7.1.94, glibc 2.2.4) for 3.0.3.

--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -467,7 +467,8 @@ Unsuccessful:
 <td>ia64-unknown-linux</td>
 <td>Red Hat 7.1.94, glibc 2.2.4</td>
 <td>Successful:
-<a href="http://gcc.gnu.org/ml/gcc/2001-09/msg00863.html">3.0.1</a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2001-09/msg00863.html">3.0.1</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00281.html">3.0.3</a></td>
 </tr>
 
 <tr>
