--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -319,7 +319,8 @@ Unsuccessful:
 <td>Debian 2.2, glibc 2.1.3</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2001-10/msg00206.html">3.0.1</a>,
-<a href="http://gcc.gnu.org/ml/gcc/2001-11/msg00206.html">3.0.2</a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2001-11/msg00206.html">3.0.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00323.html">3.0.3</a></td>
 </tr>
 
 <tr>
@@ -457,6 +458,13 @@ Unsuccessful:
 </tr>
 
 <tr>
+<td>i686-pc-linux-gnu</td>
+<td>SuSE 7.3, glibc 2.2.4, kernel 2.4.10</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00324.html">3.0.3</a></td>
+</tr>
+
+<tr>
 <td>i686-pld-linux-gnu</td>
 <td>PLD devel 1.0, glibc 2.2.3, kernel 2.2.19</td>
 <td>Successful:
@@ -490,7 +498,8 @@ Unsuccessful:
 <td>&nbsp;</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2001-07/msg00973.html">3.0</a>,
-<a href="http://gcc.gnu.org/ml/gcc/2001-08/msg01024.html">3.0.1</a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2001-08/msg01024.html">3.0.1</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00316.html">3.0.3</a></td>
 </tr>
 
 <tr>
@@ -587,7 +596,8 @@ Unsuccessful:
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2001-08/msg00941.html">3.0</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2001-08/msg01021.html">3.0.1</a>,
-<a href="http://gcc.gnu.org/ml/gcc/2001-12/msg01173.html">3.0.2</a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2001-12/msg01173.html">3.0.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00289.html">3.0.3</a></td>
 </tr>
 
 <tr>
